--- a/packages/react-devtools-core/package.json
+++ b/packages/react-devtools-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-devtools-core",
+  "name": "@textio/react-devtools-core",
   "version": "3.4.2",
   "description": "Use react-devtools outside of the browser",
   "main": "./build/backend.js",
